<resources>
    <string name="app_name">Busetas Yopal</string>
    <string name="textview">TextView</string>
    <string name="linkBaseDatos" translatable="false">https://rutas-busetas-yopal-default-rtdb.firebaseio.com/</string>
    <string name="mensaje_contacto">Enviar mensaje por correo al desarrollador</string>
    <string name="mensaje_contacto_wts">Enviar mensaje a whatsapp al desarrollador</string>
    <string name="fuente_datos">Los datos sobre el sistema de transporte público se obtienen de la información publicada por las empresas responsables y se complementan con verificación interna e investigación de campo.</string>
    <string name="enlace_alcaldia">Sitio Web Alcaldía de Yopal</string>
    <string name="tema_sugerido_sms">Contactanos ante cualquier queja/sugerencia/corrección por nuestros canales de comunicación.</string>
    <string name="seccion_rutas">RUTAS HABILITADAS</string>
    <string name="seccion_botones">OPCIONES</string>
    <string name="option_add_ubi_to_report">Enviar también ubicación actual</string>
    <string name="accept">Aceptar</string>
    <string name="alert_text_literal">Información</string>
    <string name="empty_eport_error">Reporte vacío, no se envió</string>
    <string name="description_alert_report">Por aquí puedes enviarnos opiniones, hallazgos de información incompleta y/o errónea, así como reportes generales que podrán ser redirigidos a la Secretaría de Tránsito.</string>
    <string name="nombre_shared_preferences" translatable="false">PreferenciasGuardadas</string>
    <string name="nombre_shared_show_sites_value" translatable="false">StateShowSitesRoutesPrincipal</string>
    <string name="nombre_shared_show_horfrecs_value" translatable="false">StateShowHorFrecRoutesPrincipal</string>
    <string name="ver_ruta">ver ruta</string>
    <string name="ocultar">ocultar</string>
    <string name="ruta_y_numero">Ruta %1$s</string>
    <string name="salida">Salida:</string>
    <string name="llegada">Llegada:</string>
    <string name="text_switch_enable">Activada</string>
    <string name="admin_edt_hint_price">Ingresa nuevo Precio </string>
    <string name="cancel">Cancelar</string>
    <string name="actualizar_precio_pasaje">Actualizar precio pasaje</string>
    <string name="ruta_reportes_db_nube" translatable="false">features/0/reportsModule</string>
    <string name="ruta_firebase_price_nube" translatable="false">/features/0/precio</string>
    <string name="ruta_firebase_rutas_nube" translatable="false">features/0/rutas</string>
    <string name="no_hay_reportes_en_este_momento">No hay reportes en este momento.</string>
    <string name="confirm">Confirmar</string>
    <string name="vacio">Vacío</string>
    <string name="lunes_a_viernes">Lunes a Viernes</string>
    <string name="sabados">Sabados</string>
    <string name="domingos_y_festivos">Domingos y Festivos</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="editando">Editando</string>
    <string name="no_hay_registros_en_este_momento">No hay registros que mostrar en este momento.</string>
    <string name="agregar_punto">Agregar Punto</string>
    <string name="agregando_nuevo_punto">Agregando nuevo punto</string>
    <string name="borrar_recorrido_llegada">Recorrido Llegada</string>
    <string name="borrar_recorrido_salida">Recorrido Salida</string>
    <string name="n_mero_de_ruta">Número de Ruta</string>
    <string name="ingresa_el_n_mero_de_ruta">Ingresa el número de ruta</string>
    <string name="sitios">Sitios</string>
    <string name="ingresa_los_sitios">Ingresa los sitios</string>
    <string name="frecuencia_lunes_a_viernes">Frecuencia Lunes a Viernes</string>
    <string name="ingresa_la_frecuencia">Ingresa la frecuencia</string>
    <string name="frecuencia_s_bado">Frecuencia Sábado</string>
    <string name="frecuencia_domingo_y_festivos">Frecuencia Domingo y Festivos</string>
    <string name="horario_lunes_a_viernes">Horario Lunes a Viernes</string>
    <string name="ingresa_los_horarios_separados_por_coma">Ingresa los horarios separados por coma</string>
    <string name="horario_s_bado">Horario Sábado</string>
    <string name="horario_domingo_y_festivos">Horario Domingo y Festivos</string>
    <string name="habilitado">Habilitado</string>
    <string name="activar_esta_ruta">Activar esta ruta</string>
    <string name="guardar">Guardar</string>
    <string name="agregando_nueva_ruta">Agregando Nueva Ruta</string>
    <string name="registros">Registros</string>
    <string name="reportes">Reportes</string>
    <string name="precio">Precio</string>
    <string name="rutas">Rutas</string>
    <string name="crear_ruta">Crear Ruta</string>
    <string name="este_campo_no_puede_estar_vacio">Este campo no puede estar vacío.</string>
    <string name="no_se_encontraron_rutas_en_este_momento">No se encontraron rutas en este momento</string>
    <string name="reintentar">Reintentar</string>
    <string name="busetas_yopal">Busetas Yopal</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="reportar_novedad">Reportar Novedad</string>
    <string name="buscar_sitios">Buscar Sitios</string>
    <string name="cambiar_tema">Cambiar Tema</string>
    <string name="acerca_de_la_app">Acerca de la App</string>
    <string name="ir_a_pantalla_administrador">Ir a pantalla administrador</string>
    <string name="ultima_ruta_salio">La última buseta de esta ruta salió a las %1$s pm aproximadamente.</string>
    <string name="sin_servicio_hoy">Sin servicio hoy</string>
    <string name="inicia_sesio_n_como_administrador">Inicia sesión como administrador</string>
    <string name="registros_de_acciones_administrador">Registros de acciones administrador</string>
    <string name="reportes_de_usuarios">Reportes de usuarios</string>
    <string name="rutas_editables_en_vivo">Rutas Editables en Vivo</string>
    <string name="an_adir_ruta">Añadir Ruta</string>
    <string name="actualizar_version_de_la_informacion">Actualizar Versión Información</string>
    <string name="cambiar_tema_visual_de_la_app">Cambiar tema visual de la app</string>
    <string name="buscar_sitios_o_rutas">Buscar Sitios o Rutas</string>
    <string name="busca_sitios">Buscar sitios y rutas</string>
    <string name="sin_resultados">Sin Resultados</string>
    <string name="buenos_dias">Buenos dias</string>
    <string name="tiempo_agotado_ncon_ctate_a_internet">Tiempo Agotado\nConéctate a internet.</string>
    <string name="es_necesario_tener_acceso_a_internet_revisa_tu_conexi_n">Es necesario tener acceso a internet, revisa tu conexión.</string>
    <string name="tiempo_agotado">Tiempo Agotado</string>
    <string name="toca_para_ver">Toca para ver</string>
    <string name="informaci_n_de_horarios">Información de Horarios</string>
    <string name="nhorarios">\nHorarios</string>
    <string name="explicacion_horarios">\nLos horarios muestran la hora en que sale la primera buseta y la hora en que sale la última buseta de la ruta correspondiente (aproximadamente).\n\nHorarios: Lunes a Viernes, Sábados y Domingos-Festivos. \n\nAbajo del horario está la frecuencia, es el tiempo que hay entre la salida de cada buseta; es decir, cada cierto tiempo sale del parqueadero la buseta.\n</string>
    <string name="explicacion_horarios_dia">De acuerdo al día de la semana, el horario adquirirá un color que indica la disponibilidad del servicio.\n* Cuando la buseta está funcionando/en servicio:</string>
    <string name="horario_en_verde_cuando_esta_en_servicio">Horario en verde cuando esta en servicio.</string>
    <string name="explicacion_horarios_buseta_en_rojo">\n* Cuando la buseta no está funcionando/fuera de servicio:</string>
    <string name="explicacion_horario_buseta_en_rojo">Horario en rojo cuando la buseta terminó su horario con última salida</string>
    <string name="mi_gps">Mi GPS</string>
    <string name="cambiar_la_configuraci_n_inicial_del_mapa">Cambiar la configuración inicial del mapa</string>
    <string name="tipo_de_mapa">Tipo de Mapa:</string>
    <string name="precio_pasaje">Precio Pasaje:</string>
    <string name="ver_mapa_con_las_rutas">Ver mapa con las rutas</string>
    <string name="ver_mapa_con_parqueaderos">Ver parqueaderos</string>
    <string name="ver_en_subida">Ver en Subida</string>
    <string name="ver_en_bajada">Ver en bajada</string>
    <string name="ver_distancia_al_recorrido">Ver Distancia al recorrido</string>
    <string name="seleccionar_lugar_de_partida">Seleccionar lugar de partida</string>
    <string name="seleccionar_lugar_de_destino">Seleccionar lugar de destino</string>
    <string name="guardar_posici_n">Guardar Posición</string>
    <string name="usar_mi_posici_n_gps">Usar mi Posición GPS</string>
    <string name="info_no_se_pudo_generar_el_recorrido">Info: No se pudo generar el recorrido.</string>
    <string name="no_hay_rutas_cerca">\nPosibles razones: \n- No hay rutas cerca del punto de partida o destino (menos de 500 metros).</string>
    <string name="para_ver_mi_posicion_gps">Para ver mi posicion GPS</string>
    <string name="ajustar_el_mapa">Ajustar el mapa</string>
    <string name="tog_lista_de_rutas">Tog lista de rutas</string>
    <string name="los_puntos_rojos_son_parqueaderos_toca_cualquiera_de_ellos_para_saber_a_que_ruta_pertenecen">Los puntos rojos son parqueaderos, toca cualquiera de ellos para saber a que ruta pertenecen.</string>
    <string name="calcular_viaje">Calcular viaje</string>
    <string name="compara_cualquier_recorrido_de_las_rutas_habilitadas_con_tu_posici_n_en_el_mapa_presiona_el_boton_gps_elige_ver_ruta_y_aleja_el_mapa">Compara cualquier recorrido de las rutas habilitadas con tu posición en el mapa, presiona el boton gps, elige \'VER RUTA\' y aleja el mapa.</string>
    <string name="calculando">Calculando</string>
    <string name="paso_1">Paso 1</string>
    <string name="paso_3">Paso 3</string>
    <string name="paso_2">Paso 2</string>
    <string name="paso_5">Paso 5</string>
    <string name="paso_4">Paso 4</string>
    <string name="paso_6">Paso 6</string>
    <string name="rutas_calculadas">RUTAS CALCULADAS</string>
    <string name="ver_o_ocultar_lista_rutas_calculadas">Ver o ocultar lista rutas calculadas</string>
    <string name="borrar_reporte_admin">Borrar reporte admin</string>
    <string name="guardar_cambios_en_la_ruta">Guardar cambios en la ruta</string>
    <string name="icono_baja_de_la_ruta">Icono baja de la ruta</string>
    <string name="icono_toma_la_ruta">Icono toma la ruta</string>
    <string name="punto_destino">Punto destino</string>
    <string name="camina_al_destino">Camina al destino</string>
    <string name="sitios_simples_de_la_ruta">Sitios simples de la ruta</string>
    <string name="administrador">ADMINISTRADOR</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="sign_in">Sign in</string>
    <string name="eliminar">Eliminar</string>
    <string name="mapa">Mapa</string>
    <string name="panel_de_administrador">Panel de administrador</string>
    <string name="decorative_icon">Decorative Icon</string>
    <string name="funciones">Funciones</string>
    <string name="novedades">Novedades</string>
    <string name="mis_reportes">Mis reportes</string>
    <string name="usted_no_ha_realizado_reportes">Usted no ha realizado reportes</string>
    <string name="configuracion">Configuración</string>
    <string name="preferencias">Preferencias</string>
    <string name="select_language">Tipo de Mapa</string>
    <string name="title_calculada">Ruta Calculada #%1$s</string>
    <string name="toma_buseta">"Toma la buseta #%1$s a %2$s metros marcada con: "</string>
    <string name="version_algoritmo_calcular_text">Algoritmo Version 2.1.1</string>
    <string name="step2_text_calculate">"Haz el recorrido en la buseta para bajarte en el punto marcado con: "</string>
</resources>