<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="?attr/colorBackgroundFloating"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="?attr/titleTextColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelStep1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paso_1"
            android:textColor="?attr/titleTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptStep1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="?attr/titleTextColor" />

        <ImageView
            android:contentDescription="@string/icono_toma_la_ruta"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_estacion_inicio_ruta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelStep2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paso_2"
            android:textColor="?attr/titleTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptStep2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="?attr/titleTextColor" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icono_baja_de_la_ruta"
            android:layout_weight="1"
            android:src="@drawable/ic_estacion_fin_ruta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelStep3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paso_3"
            android:textColor="?attr/titleTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="?attr/titleTextColor" />

        <ImageView
            android:contentDescription="@string/punto_destino"
            android:id="@+id/imageLastStep1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_destino" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondPartForTransfers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <!-- SECOND RUTE WHEN TRANSFER -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStep4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paso_4"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptStep4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="?attr/titleTextColor" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/icono_toma_la_ruta"
                android:src="@drawable/ic_estacion_inicio_ruta" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStep5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paso_5"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptStep5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="?attr/titleTextColor" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/icono_baja_de_la_ruta"
                android:src="@drawable/ic_estacion_fin_ruta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStep6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paso_6"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastStep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="?attr/titleTextColor" />

            <ImageView
                android:id="@+id/imageLastStep2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/camina_al_destino"
                android:src="@drawable/ic_destino" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>