<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/bord_suave"
    android:backgroundTint="?attr/colorPrimary"
    android:paddingHorizontal="8dp"
    android:paddingVertical="5dp">

    <TextView
        android:id="@+id/numRutaOpMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:foregroundGravity="center"
        android:text="@string/textview"
        android:textColor="?attr/titleTextColor"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"

        android:foregroundGravity="center_horizontal"
        android:text="@string/salida"
        android:textColor="?attr/titleTextColor"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorSalidaOpMapa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bord_suave"
        android:backgroundTint="@color/ida_venida_op_mapa"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorLlegadaOpMapa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bord_suave"
        android:backgroundTint="@color/ida_venida_op_mapa"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/colorSalidaOpMapa" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:foregroundGravity="center_horizontal"
        android:text="@string/llegada"
        android:textColor="?attr/titleTextColor"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/verRutaOpMapa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bord_suave"
        android:backgroundTint="@color/enfasis_azul"

        android:foregroundGravity="center_horizontal"
        android:text="@string/ver_ruta"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numRutaOpMapa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38442823" />

</androidx.constraintlayout.widget.ConstraintLayout>